--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/votech_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.google.android.actions"
-            android:resource="@drawable/roundedbutton" />
+        android:theme="@style/AppTheme"
+        >
 
-        <activity android:name=".Register" />
-        <activity android:name=".HomePage" />
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".Register" android:screenOrientation="portrait"/>
+        <activity android:name=".HomePage" android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
