--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
     implementation 'com.ablanco.imageprovider:imageprovider:0.1.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
