--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation group: 'com.backendless', name: 'backendless', version: '5.0.+'
     // required for real-time database and real-time messaging
     implementation('io.socket:socket.io-client:1.0.0') {
