--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pollVote"></activity>
+        <activity android:name=".pollVote"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Home"
             android:screenOrientation="portrait" />
